--- a/index.html
+++ b/index.html
@@ -1,65 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Code+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Code+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img class="logog" src="https://icon2.cleanpng.com/20180525/wcc/kisspng-spore-galactic-adventures-spore-hero-the-sims-vid-5b084cd24ba446.9583783615272706103098.jpg" height="50px">
-            Spore
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#about">О Spore</a></li>
-                <li><a href="#stages">Этапы</a></li>
-                <li><a href="#gallery">Галерея</a></li>
-                <li><a href="#editor">О редакторе</a></li>
-                <li><a href="#other">Прочие</a></li>
-                
-            </ul>
-        </nav>
+      <div class="logo">
+        <img
+          class="logog"
+          src="https://icon2.cleanpng.com/20180525/wcc/kisspng-spore-galactic-adventures-spore-hero-the-sims-vid-5b084cd24ba446.9583783615272706103098.jpg"
+          height="50px"
+        />
+        Spore
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#about" class="scroll_button">О Spore</a></li>
+          <li><a href="#stages" class="scroll_button">Этапы</a></li>
+          <li><a href="#gallery">Галерея</a></li>
+          <li><a href="#editor">О редакторе</a></li>
+          <li><a href="#other">Прочие</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <h1>Что такое Spore?</h1>
+      <h1 >Что такое Spore?</h1>
 
-        <p>Короче, Spore — это такая компъютерная игра, где ты управляешь
-        существами и смотришь, как они развиваются. Сделали её в студии Maxis, 
-        а выпускала Electronic Arts. В общем, игра про эволюцию жизни на планете, 
-        и идея была настолько необычная, что про неё заговорили ещё до выхода.
-        </p>
-        <img class="infa" src="https://www.gry-online.pl/i/h/4/759770062.jpg">
+      <p>
+        Короче, Spore — это такая компъютерная игра, где ты управляешь
+        существами и смотришь, как они развиваются. Сделали её в
+        студии Maxis, а выпускала Electronic Arts. В общем, игра про
+        эволюцию жизни на планете, и идея была настолько необычная,
+        что про неё заговорили ещё до выхода.
+      </p>
+      <img
+        class="infa"
+        src="https://www.gry-online.pl/i/h/4/759770062.jpg"
+      />
 
-        <h1>Вкраце про сюжет</h1>
+      <h1 class="heading0">Вкраце про сюжет</h1>
 
-        <p>Жизнь началась в какой-то капле воды. Много миллиардов лет эволюции, 
-        кучи мутаций — и вот получилась вся эта земная живность. Но как из 
-        бактерии вырастает целая космическая цивилизация — это большая загадка,
-        и Spore чуть приоткрывает её. Ты попадаешь в эпоху, когда по планете ползают 
-        только микробы, и начинаешь развивать их, проходя все этапы эволюции. В конце концов 
-        под твоим управлением оказывается целая крутая цивилизация, которая может рвануть
-        в космос искать новые миры. Прикольно же — быть создателем разумной жизни!</p>
+      <p>
+        Жизнь началась в какой-то капле воды. Много миллиардов лет
+        эволюции, кучи мутаций — и вот получилась вся эта земная
+        живность. Но как из бактерии вырастает целая космическая
+        цивилизация — это большая загадка, и Spore чуть приоткрывает
+        её. Ты попадаешь в эпоху, когда по планете ползают только
+        микробы, и начинаешь развивать их, проходя все этапы эволюции.
+        В конце концов под твоим управлением оказывается целая крутая
+        цивилизация, которая может рвануть в космос искать новые миры.
+        Прикольно же — быть создателем разумной жизни!
+      </p>
 
-        <h1>Чуть про геймплей</h1>
+      <h1>Чуть про геймплей</h1>
 
-        <p>Spore — это игра про эволюцию от микроба до космической цивилизации. Сначала ты 
-        управляешь маленькой клеткой в воде, кушаешь, растёшь и мутируешь. Потом вырастаешь 
-        в существо на суше, строишь племя, общаешься с другими видами и развиваешь цивилизацию.
-        Потом цивилизация осваивает планету и рвётся в космос. Везде есть свои фишки, а 
-        редактор существ позволяет создавать уникальных персонажей — менять тело, лапы, глаза,
-        крылья и всё такое. Короче, от микроба до межзвёздного правителя!</p>
-
-        <h1>Этапы игры</h1>
-        
-        <p>В спор есть всего пять этапов(если не учитывать удалённые этапы) про них ниже  </p>
-
-        <h2>Клетка</h2>
-
-        <p class></p>
+      <p>
+        Spore — это игра про эволюцию от микроба до космической
+        цивилизации. Сначала ты управляешь маленькой клеткой в воде,
+        кушаешь, растёшь и мутируешь. Потом вырастаешь в существо на
+        суше, строишь племя, общаешься с другими видами и развиваешь
+        цивилизацию. Потом цивилизация осваивает планету и рвётся в
+        космос. Везде есть свои фишки, а редактор существ позволяет
+        создавать уникальных персонажей — менять тело, лапы, глаза,
+        крылья и всё такое. Короче, от микроба до межзвёздного
+        правителя!
+      </p>
     </main>
-</body>
+    <main>
+      <h1 class="heading1">Этапы игры</h1>
+
+      <p>
+        В спор есть всего пять этапов(если не учитывать удалённые
+        этапы) про них ниже
+      </p>
+
+      <h2>Клетка</h2>
+
+      <p class></p>
+    </main>
+
+    <script src="main.js"></script>
+  </body>
 </html>
