--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <ul>
           <li><a href="#about" class="scroll_button">О Spore</a></li>
           <li><a href="#stages" class="scroll_button">Этапы</a></li>
-          <li><a href="#gallery">Галерея</a></li>
-          <li><a href="#editor">О редакторе</a></li>
-          <li><a href="#other">Прочие</a></li>
+          <li><a href="#gallery" class="scroll_button">Галерея</a></li>
+          <li><a href="#editor" class="scroll_button">О редакторе</a></li>
+          <li><a href="#other" class="scroll_button">Прочие</a></li>
         </ul>
       </nav>
     </header>
