--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
         <ul>
         <li><a href="#about" class="scroll_button">О Spore</a></li>
         <li><a href="#stages" class="scroll_button">Этапы</a></li>
-        <li><a href="#gallery" class="scroll_button">Галерея</a></li>
         <li><a href="#editor" class="scroll_button">О редакторе</a></li>
         <li><a href="#other" class="scroll_button">Прочие</a></li>
         </ul>
       </nav>
     </header>
     <main>
-        <h1 >Что такое Spore?</h1>
+        <h1>Что такое Spore?</h1>
 
         <p class="etap">
         Короче, Spore — это такая компъютерная игра, где ты управляешь
@@ -77,9 +76,11 @@
         этапы) про них ниже
       </p>
 
-        <h2>Клетка</h2> у
+        <h2>Клетка</h2>
 
-        <p class="heading1">Этап «Клетка» Это первый и 
+        <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541720630405/5EE05F39BE8380DC4CECAD71EF7CDB598BB4F5D4/" height="180px">
+
+        <p style="margin-bottom: 70px;" class="heading1">Этап «Клетка» Это первый и 
         самый короткий этап, на котором вы усваиваете 
         базовые принципы игры. Ваша цель — есть, развиваться, 
         собирать ДНК и готовиться к выходу на сушу. Для открытия
@@ -154,7 +155,9 @@
 
         <h2>Существо</h2>
 
-        <p>После этапа "Клетка" ваше существо выходит на сушу,
+        <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541721896425/036C9F227EEF18A50C23EF08F44C457DFDD51475/" height="180px">
+
+        <p style="margin-bottom: 70px;">После этапа "Клетка" ваше существо выходит на сушу,
         и начинается первый полноценный 3D-этап. Основная цель
         — развивать тело, улучшать органы и мозг, собирать
         ДНК и формировать навыки, которые пригодятся на последующих 
@@ -201,7 +204,9 @@
 
         <h2>Племя</h2>
 
-        <p>Когда существо игрока получает развитый мозг, оно переходит
+        <img style="float: left; margin: 5px;" src="https://images.steamusercontent.com/ugc/2031741541721555405/A986A19EDAF077C029E2F2324899A082D4DAA49D/" height="180px">
+
+        <p style="margin-bottom: 35px;">Когда существо игрока получает развитый мозг, оно переходит
         на этап «Племя». Здесь управление уже идёт не одним существом,
         а целой группой. Главная цель — собрать племя,
         добывать пищу, защищать деревню, взаимодействовать с другими
@@ -279,7 +284,9 @@
 
         <h2>Цивилизация</h2>
 
-        <p>На этапе «Цивилизация» игрок управляет уже не 
+        <img  style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541721617512/0DE030757B663F5648C3AF7098CAC777125C84E3/" height="180px">
+
+        <p style="margin-bottom: 35px;">На этапе «Цивилизация» игрок управляет уже не 
         отдельными существами, а целыми городами, армией
         и воздушным транспортом. В начале вам даётся
         3000 Спорлинг, и вы сразу контролируете первый
@@ -365,7 +372,9 @@
 
         <h1>Этап "Космос"</h1>
 
-        <p>Этап "Космос" — это кульминация всей игры Spore, последний 
+        <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541721670203/8B70A51F2B498F4E94710ECE0ACAC66CC3894FB0/" height="180px">
+
+        <p  style="margin-bottom: 90px;">Этап "Космос" — это кульминация всей игры Spore, последний 
         и самый масштабный этап, где игрок получает возможность
         управлять целым космическим кораблём, исследовать бескрайние
         звёздные системы и влиять на судьбы целых планет и рас.
@@ -483,6 +492,155 @@
         <blockquote>
         "Когда мне было десять лет и дошел до этого этапа я нихера не понял и удалил игру к чертовой матери."
         </blockquote>
+
+        <h2>Карточки развития</h2>
+
+        <p>
+        Карточки развития — это особые бонусы, которые игрок получает в конце каждого этапа. 
+        Они отражают стиль прохождения (мирный, агрессивный, смешанный) и дают уникальные навыки на следующих стадиях. 
+        В итоге набор карточек формирует философию цивилизации на этапе Космос.
+       </p>
+
+        <h3>Зелёные карточки (мирные)</h3>
+        <ul>
+        <li><strong>Травоядность</strong> — еда из растений, доступ к травоядным частям.</li>
+        <li><strong>Дружелюбие</strong> — общение и союзы, упор на дипломатии.</li>
+        <li><strong>Религия</strong> — влияние через веру и идеи на этапе Цивилизации.</li>
+        </ul>
+
+        <h3>Синие карточки (сбалансированные)</h3>
+        <ul>
+        <li><strong>Всеядность</strong> — универсальное питание, доступ к смешанным частям.</li>
+        <li><strong>Адаптация</strong> — баланс между боем и общением.</li>
+        <li><strong>Трудолюбие</strong> — союзники и враги одновременно.</li>
+        <li><strong>Экономика</strong> — влияние через деньги и торговлю.</li>
+       </ul>
+
+        <h3>Красные карточки (агрессивные)</h3>
+        <ul>
+        <li><strong>Плотоядность</strong> — питание мясом, доступ к хищным частям.</li>
+        <li><strong>Агрессия</strong> — сила, сражения, уничтожение врагов.</li>
+        <li><strong>Военное дело</strong> — захват городов оружием и армией.</li>
+        </ul>
+
+        <h3>Супероружие</h3>
+        <p>
+        На этапе Цивилизации карточки открывают «суперприёмы» вроде МБР, 
+        «Пришествия мессии» или «Всемирного слияния» — мощные способы захвата мира.
+        </p>
+
+        <h3>Особые навыки</h3>
+        <p>Каждая карточка даёт бонусы на всех этапах:</p>
+        <ul>
+        <li><strong>На Существе</strong> — способности вроде устрашения или очарования.</li>
+        <li><strong>На Племени</strong> — особые умения вождя.</li>
+        <li><strong>На Цивилизации</strong> — уникальные действия для городов и техники.</li>
+        <li><strong>На Космосе</strong> — глобальные эффекты: скидки, улучшения оружия, дипломатия и т.д.</li>
+        </ul>
+
+        <h1>Философии в Spore</h1>
+
+        <p><b>Философия</b> — это стиль игры на этапе «Космос», формирующийся из собранных карточек развития 
+        (мирных, агрессивных, сбалансированных). Она влияет на дипломатию, торговлю, вооружение и открывает 
+        уникальное <b>супероружие</b>.</p>
+
+        <h3>Основные философии</h3>
+
+  <img style="float: left; margin: 5px;" src="https://images.steamusercontent.com/ugc/2031741049202076790/0FCE1EE114ED0C33F970BE88EFE9C0724E3DA1F5/">
+  <h4>🟢 Шаман</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 4 зеленых карточки.<br>
+  <b>Навык:</b> «Обратный билет» — возвращает корабль домой.<br>
+  <b>Особенности:</b> балансная философия, облегчает исследование.</p>
+  
+  <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741049202077245/EAF58CBC3BCBFE09620ADE777A689251F7C1478A/">
+  <h4>🔵 Торговец</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 4 синих карточек.<br>
+  <b>Навык:</b> «Вливание капитала» — покупка планет и систем.<br>
+  <b>Особенности:</b> сильная экономика, лёгкое накопление ресурсов.</p>
+
+  <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741049202077882/C76B1ADE87F35617B3F4EAB44D3307AF11E7D7FF/">
+  <h4>🔴 Воин</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 4 красных карточек.<br>
+  <b>Навык:</b> «Призыв к бою» — вызывает флот пиратов.<br>
+  <b>Особенности:</b> упор на агрессию и военные технологии.</p>
+
+  <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741049202078296/B3FD265D2A72C1AC1F2F42042065018722884D08/">
+  <h4>⚖️ Дипломат</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 2 зеленые карточки и 2 синие.<br>
+  <b>Навык:</b> «Статический заряд» — отключает оборону планеты.<br>
+  <b>Особенности:</b> лучший выбор для мирного завоевания галактики.</p>
+
+  <img style="float: left; margin: 5px;"   src="https://images.steamusercontent.com/ugc/2031741049202078783/766319ED5C6014F135BBA6321160C93B8A3ED2F6/">
+  <h4>🧪 Учёный</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 2 красные карточки и 2 синие.<br>
+  <b>Навык:</b> «Гравитационная волна» — разрушает города и строения.<br>
+  <b>Особенности:</b> быстрые перелёты и технологические преимущества.</p>
+
+  <img style="float: left; margin: 5px;"    src="https://images.steamusercontent.com/ugc/2031741049202079464/2D8436753236567B7E3021A19465FE980F66B312/">
+  <h4>✝️ Фанатик</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 2 зеленые карточки и 2 красные.<br>
+  <b>Навык:</b> «Исступление» — религиозный захват систем.<br>
+  <b>Особенности:</b> агрессивное влияние через веру.</p>
+
+  <img style="float: left; margin: 5px;"     src="https://images.steamusercontent.com/ugc/2031741049202078783/766319ED5C6014F135BBA6321160C93B8A3ED2F6/">
+  <h4>🌱 Эколог</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 2 зеленые карточки, 1 синюю и 1 красную.<br>
+  <b>Навык:</b> «Массовое похищение» — собирает всю флору и фауну.<br>
+  <b>Особенности:</b> терраформирование и защита жизни.</p>
+
+  <img style="float: left; margin: 5px;"     src="https://images.steamusercontent.com/ugc/2031741049202080061/DC903B74CF14643BAFEC2B84CBE1303C3DC0F56F/">
+  <h4>🎵 Бард</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 2 синие карточки, 1 зелёную и 1 красную.<br>
+  <b>Навык:</b> «Задушевная песнь» — временное прекращение войн.<br>
+  <b>Особенности:</b> юмористическая философия, фан-стиль.</p>
+
+  <img style="float: left; margin: 5px;"     src="https://images.steamusercontent.com/ugc/2031741049202080370/4BC8126B90F71537ACC328C770291C3028F11D10/">
+  <h4>⚔️ Рыцарь</h4>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> 2 красные карточки, 1 зелёную и 1 синюю.<br>
+  <b>Навык:</b> «Мини-клон» — создаёт копию корабля.<br>
+  <b>Особенности:</b> доступна только игроку, NPC не используют.</p>
+
+
+  <h4>🌌 Странник</h4>
+  <p><b>Как получить:</b> Начать игру прямо с этапа "Космос".<br>
+  <b>Навык:</b> отсутствует.<br>
+  <b>Особенности:</b> начальная нейтральная философия.</p>
+
+  <h3>Супероружие</h3>
+  <p>Каждая философия открывает своё супероружие:</p>
+  <ul>
+    <li>Шаман — Обратный билет (телепорт домой)</li>
+    <li>Воин — Призыв к бою (наём пиратов)</li>
+    <li>Фанатик — Исступление (религиозный захват)</li>
+    <li>Учёный — Гравитационная волна (разрушение построек)</li>
+    <li>Торговец — Вливание капитала (покупка планет)</li>
+    <li>Дипломат — Статический заряд (отключение обороны)</li>
+    <li>Эколог — Массовое похищение (сбор экосистемы)</li>
+    <li>Бард — Задушевная песнь (мир между империями)</li>
+    <li>Рыцарь — Мини-клон (создание копии корабля)</li>
+    <li>Странник — отсутствует</li>
+  </ul>
+
+  <h3>Гроксы</h3>
+
+    <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541708600511/122F7FD1A328B10C0CDE8FE02D7714D34CB199CC/" height="230px">
+
+    <p>Гроксы — один из самых могущественных и таинственных видов во вселенной Spore. Их философия называется <strong>агрессивный гибрид</strong>, и за неё нельзя играть: она доступна только NPC и больше ни у кого. Эта уникальная философия делает их совершенно особенными и непохожими на обычные цивилизации.</p>
+
+    <p style="margin-bottom: 70px;">Эти существа созданы для выживания в самых экстремальных условиях, например на мёртвых или разрушенных планетах, где почти нет ресурсов. Они не зависят от союзов, торговли или дипломатии — всё, что им нужно, они добывают сами.</p>
+
+    <h3>Особенности Гроксов:</h3>
+    <ul>
+        <li><strong>Агрессивность:</strong> они атакуют всё живое вокруг, и для других цивилизаций Гроксы всегда представляют серьёзную угрозу.</li>
+        <li><strong>Выживаемость:</strong> даже на пустых и враждебных планетах они способны выжить, добывать ресурсы и создавать военные силы.</li>
+        <li><strong>Распространение:</strong> Гроксы путешествуют по галактике с невероятной скоростью, захватывая новые миры один за другим.</li>
+        <li><strong>Уникальная цивилизация:</strong> технологии, армии и развитие их общества формируются автоматически, без участия игрока. Это делает их практически непобедимыми, и обычные цивилизации едва могут с ними справиться.</li>
+    </ul>
+
+    <p>В игре Гроксы создают настоящий галактический хаос, уничтожая и захватывая планеты. Они демонстрируют, что во вселенной Spore есть такие виды, которые почти невозможно победить, и философия Гроксов полностью уникальна и недоступна для игроков.</p>
+
+  <p><i>Короче, философия решает стиль игры: хочешь быть агрессором, мудрецом или дипломатом — собирай карточки с умом.</i></p>
+
 
     </main>
 
