--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
         <li><a href="#about" class="scroll_button">О Spore</a></li>
         <li><a href="#stages" class="scroll_button">Этапы</a></li>
-        <li><a href="#editor" class="scroll_button">О редакторе</a></li>
+        <li><a href="#editor" class="scroll_button">О редакторах</a></li>
         <li><a href="#other" class="scroll_button">Прочие</a></li>
         </ul>
       </nav>
@@ -155,7 +155,7 @@
 
         <h2>Существо</h2>
 
-        <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541721896425/036C9F227EEF18A50C23EF08F44C457DFDD51475/" height="180px">
+        <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/17588687186507601862/2D428E970719F88D18EA9DB9B90B85970D4A6DC1/" height="180px">
 
         <p style="margin-bottom: 70px;">После этапа "Клетка" ваше существо выходит на сушу,
         и начинается первый полноценный 3D-этап. Основная цель
@@ -370,7 +370,7 @@
         к освоению космоса, улучшение техники и стратегическое планирование
         глобальных операций.</p>
 
-        <h1>Этап "Космос"</h1>
+        <h2>Космос</h2>
 
         <img style="float: left; margin: 5px;"  src="https://images.steamusercontent.com/ugc/2031741541721670203/8B70A51F2B498F4E94710ECE0ACAC66CC3894FB0/" height="180px">
 
@@ -600,9 +600,9 @@
   <b>Навык:</b> «Мини-клон» — создаёт копию корабля.<br>
   <b>Особенности:</b> доступна только игроку, NPC не используют.</p>
 
-
+  <img style="float: left; margin: 5px; border: 5px gray solid;"     src="https://images.steamusercontent.com/ugc/12310971880986568686/105A5DE306D50ACBDF0F16DE7BE46A4F97F425F0/ ">
   <h4>🌌 Странник</h4>
-  <p><b>Как получить:</b> Начать игру прямо с этапа "Космос".<br>
+  <p style="margin-bottom: 100px;"><b>Как получить:</b> Начать игру прямо с этапа "Космос".<br>
   <b>Навык:</b> отсутствует.<br>
   <b>Особенности:</b> начальная нейтральная философия.</p>
 
@@ -640,7 +640,311 @@
     <p>В игре Гроксы создают настоящий галактический хаос, уничтожая и захватывая планеты. Они демонстрируют, что во вселенной Spore есть такие виды, которые почти невозможно победить, и философия Гроксов полностью уникальна и недоступна для игроков.</p>
 
   <p><i>Короче, философия решает стиль игры: хочешь быть агрессором, мудрецом или дипломатом — собирай карточки с умом.</i></p>
+    </main>
 
+    <main>
+    <h1 class="heading2">О редакторах</h1>
+
+    <p class="etap">В Spore существует шесть основных редакторов, служащих для создания любых творений. Также бывают и второстепенные редакторы</p>
+
+    <h1>Редактор клеток в Spore</h1>
+
+    <p><strong>Редактор клеток</strong> — инструмент в игре <em>Spore</em> для редактирования клеток на этапе «Клетка». Он похож на редактор существ, но работает в 2D и с упрощённой заготовкой тела.</p>
+
+    <h2 class="redaktor">Редактирование</h2>
+    <ul>
+        <li>В начале доступны 6 позвонков, покрытых клеточной плёнкой. Их можно делать толще или тоньше и удлинять.</li>
+        <li>Всего 24 вида окраски клетки.</li>
+    </ul>
+
+    <h2 class="redaktor">Фрагменты</h2>
+    <p>Можно добавлять различные части: рты, шипы, реснички, хоботки. Комбинации частей позволяют становиться всеядным и эффективнее добывать ДНК.</p>
+
+    <h2 class="redaktor">Доступ к полному редактору</h2>
+    <p>В полной версии игры можно открыть расширенный CellEditor, добавив в свойства ярлыка:</p>
+    <pre>"C:\Program Files\Electronic Arts\SPORE\Sporebin\SporeApp.exe" -state:CellEditor</pre>
+    <p>Это даёт доступ к дополнительным фрагментам, включая «Вытянутый глаз».</p>
+
+    <h2 class="redaktor">Интересные факты</h2>
+    <ul>
+        <li>Секретные фрагменты остаются недоступными на этапе «Существо».</li>
+        <li>Глаза клетки меняют цвет в зависимости от базового окраса.</li>
+        <li>Клетки из скрытого редактора можно сохранять, но нельзя открыть в Sporepedia.</li>
+    </ul>
+
+
+        <h1>Редактор существ в Spore</h1>
+
+    <p><strong>Редактор существ</strong> — это инструмент в <em>Spore</em>, доступный на этапах «Существо» и «Космос». 
+       С его помощью можно создавать и изменять существ, используя сотни фрагментов тела, оружия и украшений.</p>
+
+    <h2 class="redaktor">Типы редактора</h2>
+    <ul>
+        <li><strong>Редактор простейших</strong> — доступен в начале этапа «Существо», содержит части из этапа «Клетка» и несколько ног.</li>
+        <li><strong>Обычный редактор</strong> — открывается при спаривании на этапе «Существо».</li>
+        <li><strong>Космический редактор</strong> — доступен только на этапе «Космос» через специальные инструменты.</li>
+    </ul>
+
+    <h2 class="redaktor">Фрагменты</h2>
+    <p>В игре около <strong>400 частей</strong>, разделённых на категории (ноги, рты, оружие и др.). 
+       Многие из них открываются с ростом интеллекта или добываются через охоту и раскопки костей.</p>
+
+    <h2 class="redaktor">Окраска</h2>
+    <p>Редактор поддерживает полную и частичную окраску (базовый слой, верхний слой, эффекты). 
+       Дополнения «Жуткие и Милые» и «Космические приключения» добавляют новые варианты.</p>
+
+    <h2 class="redaktor">Режим проверки</h2>
+    <p>Позволяет протестировать поведение существа: как оно ходит, ест, дерётся, а также выбрать фон, 
+       записать видео или сделать скриншоты.</p>
+
+    <h2 class="redaktor">горячие клавишы</h2>
+    <ul>
+        <li>Alt — клонирование частей.</li>
+        <li>Tab — вращение фрагментов.</li>
+        <li>Ctrl — отделение элементов.</li>
+        <li>A — включение асимметрии.</li>
+    </ul>
+
+    <h2 class="redaktor">Чит-коды</h2>
+    <ul>
+        <li><code>freedom on/off</code> — снимает ограничения сложности.</li>
+        <li><code>blocksmode</code> — превращает части в «кубические».</li>
+        <li><code>addDNA</code> — добавляет 150 ДНК.</li>
+    </ul>
+
+    <h2 class="redaktor">Интересные факты</h2>
+    <ul>
+        <li>В редакторе можно сделать до 30 разных заготовок тел.</li>
+        <li>При использовании модов могут возникать баги с асимметричными частями.</li>
+        <li>PNG-карточка существа сохраняет свечение пола лаборатории.</li>
+    </ul>
+         <h1>Редактор снаряжения в Spore</h1>
+
+    <p><strong>Редактор снаряжения</strong> — специальный инструмент в игре <em>Spore</em>, предназначенный для создания одежды и аксессуаров для существ. Он отличается от стандартного редактора существ, позволяя добавлять декоративные элементы и индивидуализировать внешний вид членов племени или цивилизации. Доступен на этапах «Племя» — «Космос». Валюта для работы — единицы снаряжения.</p>
+
+    <h2 class="redaktor">Типы редакторов</h2>
+    <ul>
+        <li><strong>Снаряжение племени</strong> — появляется на этапе «Племя». Оно влияет на навыки существ в племени, а в следующих этапах выполняет декоративную роль. Стартовая валюта — 20 единиц, с каждым найденным тотемом количество увеличивается.</li>
+        <li><strong>Снаряжение цивилизации</strong> — доступно на этапе «Цивилизация». Дополняет редактор новыми фрагментами и используется в основном для украшения, не влияя на игровой процесс. Валюта на этом этапе — 1000 единиц.</li>
+        <li><strong>Космическое снаряжение</strong> — появляется на этапе «Космос». Добавляет уникальные фрагменты для оформления существ в космическом масштабе, декоративная роль.</li>
+        <li><strong>Снаряжение капитана</strong> — доступно в дополнении <em>Spore: Космические приключения</em> на этапе «Космос». Включает 32 фрагмента с индивидуальными навыками, которые помогают в прохождении приключений и придают уникальность капитану.</li>
+    </ul>
+
+    <h2 class="redaktor">История</h2>
+    <p>Редактор снаряжения впервые был представлен на конференции дизайн-документов в апреле 2006 года. На E3 2005 Уилл Райт рассказал, что одежда будет включена при условии, если её можно реализовать через редактор существ с использованием фрагментов вместо обычных частей тела. В финальной версии игры все члены племени выглядят одинаково, хотя идея различать их по нарядам оставалась в планах разработчиков.</p>
+
+    <h2>Интересные факты</h2>
+    <ul>
+        <li>Фон редактора капитана основан на переработанном фоне редактора существ.</li>
+        <li>В предрелизной версии валютой в редакторе снаряжения племени была еда.</li>
+        <li>Снаряжение племени изначально играло функциональную роль, улучшая навыки, но в финальной версии оно стало в основном декоративным.</li>
+    </ul>
+
+        <h1>Редактор построек</h1>
+    <p>Редактор построек в Spore предназначен для создания различных типов зданий: ратуш, жилых домов, развлекательных центров и заводов. Каждое здание имеет уникальные фрагменты и функциональные особенности. Этот редактор позволяет игроку проявить творчество и экспериментировать с архитектурой, комбинируя различные элементы и создавая уникальные постройки для своего племени, цивилизации или космической империи.</p>
+
+    <h2 class="redaktor">Горячие клавиши</h2>
+    <ul>
+        <li><strong>Tab</strong> — вращение деталей в пространстве (кроме корпусов, крыш и дверей).</li>
+        <li><strong>Ctrl</strong> — поднимает или опускает детали; при раскраске позволяет раскрасить все одинаковые фрагменты одновременно.</li>
+        <li><strong>Shift</strong> — перемещение деталей по плоскости без изменения высоты.</li>
+        <li><strong>Alt</strong> — копирование выбранных деталей или цвета пипеткой.</li>
+        <li>Можно создавать эффект радуги или портала, ставя одинаковые фрагменты разных цветов в одну точку.</li>
+    </ul>
+
+    <h2 class="redaktor">Фрагменты</h2>
+    <p>Редактор построек предлагает широкий набор фрагментов для всех типов зданий. Можно комбинировать стены, крыши, двери, окна и декоративные элементы, создавая сложные и уникальные конструкции. Различные комбинации дают возможность строить здания в едином стиле или экспериментировать с причудливой архитектурой.</p>
+
+    <h2 class="redaktor">Окраска</h2>
+    <p>Всего доступно <strong>174 вида окраски</strong>, включая:</p>
+    <ul>
+        <li>54 варианта для полной и частичной окраски, которые позволяют изменить цвет и текстуру конкретных частей здания.</li>
+        <li>120 вариантов из режима «кисть», где можно раскрашивать фрагменты индивидуально, создавая уникальные узоры и цветовые комбинации.</li>
+    </ul>
+    <p>Эти инструменты дают возможность создавать визуально эффектные постройки, которые могут выглядеть как реалистично, так и фантастически.</p>
+
+    <h2 class="redaktor">Баги и глюки</h2>
+    <ul>
+        <li>При создании высоких зданий или использовании одинаковых фрагментов на одной плоскости они иногда исчезают из споропедии без объяснений.</li>
+        <li>Некоторые баги возникают при работе с модами или нестандартными комбинациями элементов.</li>
+    </ul>
+
+    <h2 class="redaktor">Интересные факты</h2>
+    <ul>
+        <li>В демо-версии цвет и окраска не отображались во время сборки, что усложняло процесс создания зданий.</li>
+        <li>Существуют модификации, позволяющие вращать любые фрагменты и расширять возможности редактора.</li>
+        <li>В скрытых редакторах был предусмотрен ещё один тип построек — ферма, но её вырезали, и при выборе она автоматически заменялась на ратушу.</li>
+        <li>Игроки могут комбинировать разные типы зданий (жилище, завод, развлекательный центр, ратушу) в едином стиле и назначать метки, чтобы Империи и Страны автоматически использовали их в игре.</li>
+        <li>Редактор построек является мощным инструментом не только для творчества, но и для оптимизации геймплея, так как правильно построенные здания влияют на развитие племени и цивилизации.</li>
+    </ul>
+
+        <h1>Редактор техники в Spore</h1>
+
+    <p>Редактор техники доступен на этапах «Цивилизация» и «Космос». С его помощью можно создавать транспорт: от наземных машин до космических кораблей. Техника используется для передвижения, торговли, атаки и захвата городов или планет.</p>
+    <p><strong>Этапы:</strong> Цивилизация — Космос<br>
+       <strong>Валюта:</strong> Запчасть<br>
+       <strong>Код активации:</strong> -state:VehicleEditor</p>
+
+    <h2 class="redaktor">Типы техники</h2>
+    <h3>Наземная техника</h3>
+    <p>Передвигается по поверхности планеты.</p>
+    <ul>
+        <li><strong>Фрагменты:</strong> двигатели, колёса, гусеницы, ходунки, кузова, броня, орудия, декоративные элементы</li>
+        <li><strong>Параметры:</strong> здоровье 150–750, скорость 5–45, мощь 10–50</li>
+        <li><strong>Советы:</strong> лёгкие машины для разведки, гусеничные для пересечённой местности, комбинировать броню и орудия для баланса</li>
+    </ul>
+
+    <h3>Морская техника</h3>
+    <p>Передвигается по воде, открывается в городах с доступом к морю.</p>
+    <ul>
+        <li><strong>Фрагменты:</strong> двигатели, паруса, поплавки, вёсла, орудия, башни</li>
+        <li><strong>Параметры:</strong> здоровье 200–1000, скорость 5–45, мощь 15–75</li>
+        <li><strong>Советы:</strong> тяжёлые боевые корабли для захвата, лёгкие суда для торговли, гибридные конструкции для скорости и огневой мощи</li>
+    </ul>
+
+    <h3>Воздушная техника</h3>
+    <p>Перемещается по воздуху, открывается после захвата 4 городов.</p>
+    <ul>
+        <li><strong>Фрагменты:</strong> крылья, двигатели, пропеллеры, газонепроницаемые оболочки, оружие</li>
+        <li><strong>Параметры:</strong> здоровье 150–750, скорость 10–90, мощь 10–50</li>
+        <li><strong>Советы:</strong> быстрые разведывательные самолёты для изучения карты, штурмовые дроны для поддержки наземной и морской техники</li>
+    </ul>
+
+    <h3>Космическая техника</h3>
+    <p>Доступна на этапе «Космос», использует фрагменты всех предыдущих видов. Играет важную роль в защите системы, захвате чужих планет и торговле.</p>
+    <ul>
+        <li><strong>Фрагменты:</strong> модернизированные двигатели, крылья, оружие дальнего действия, декоративные элементы</li>
+        <li><strong>Советы:</strong> гибридные корабли для баланса скорости, вооружения и защиты, адаптированные под стратегию</li>
+    </ul>
+
+    <h2 class="redaktor">Фрагменты техники</h2>
+    <p>Фрагменты улучшают характеристики: прочность, скорость, военную, экономическую или религиозную мощь. Некоторые — декоративные. В космическом корабле и колониальной технике декоративные элементы не влияют на характеристики.</p>
+
+    <h2 class="redaktor">Окраска</h2>
+    <p>Всего 174 вида окраски: 54 полной/частичной и 120 из «режима кисти». Каждый вид техники имеет отдельную палитру. Режим кисти позволяет раскрашивать все одинаковые фрагменты сразу.</p>
+
+    <h2 class="redaktor">Баги и глюки</h2>
+    <ul>
+        <li><strong>Двойное выделение:</strong> два элемента выделяются одновременно, исправляется повторным нажатием</li>
+        <li><strong>Летающие детали:</strong> при наведении на стрелку во время анимации фрагмент может улететь</li>
+    </ul>
+
+    <h2 class="redaktor">Параметры техники</h2>
+    <p>На этапе «Цивилизация» отображаются все характеристики. На этапе «Космос» параметры скрыты, но влияют на эффективность.</p>
+
+    <h2 class="redaktor">Интересные факты</h2>
+    <ul>
+        <li>Цвет орудия зависит от мощности</li>
+        <li>Технику нельзя сохранить, если меньше трёх деталей</li>
+        <li>Существует вырезанный тип «Комбайн», доступный через скрытый редактор</li>
+    </ul>
+
+    <h1>Редактор приключений</h1>
+
+<p>Редактор приключений появляется в дополнении "Космические Приключения". Он позволяет создавать сценарии с существами, техникой, постройками, объектами, визуальными и звуковыми эффектами. При первом запуске появляется учебник с основами использования.</p>
+
+<h2 class="redaktor">Как пользоваться редактором</h2>
+<p>Выбирайте планету из Споропедии и начинайте редактировать. Капитана можно разместить перетаскиванием значка. Камеру можно вращать, масштабировать колесиком мыши и перемещать по краям экрана. Добавление существ и объектов осуществляется через палитру. Скопировать существо — <strong>Alt</strong>, изменить размер — <strong>Shift + колесо мыши</strong>.</p>
+
+<h2 class="redaktor">Конструктор</h2>
+<p>Добавляет в приключение существа, технику, постройки, объекты, игровые объекты, музыку и эффекты.</p>
+
+<h2 class="redaktor">Палитра</h2>
+<p>Расположена в левом верхнем углу. Разделы:</p>
+<ul>
+  <li>Существа</li>
+  <li>Техника</li>
+  <li>Постройки</li>
+  <li>Объекты</li>
+  <li>Игровые объекты</li>
+  <li>Музыка</li>
+  <li>Эффекты</li>
+</ul>
+<p>Можно сворачивать и загружать более 10 творений с каждого раздела.</p>
+
+<h2 class="redaktor">Общие настройки</h2>
+<ul>
+  <li>Настройка видимости и появления объектов.</li>
+  <li>Команды для существ и объектов: союзники не атакуют друг друга, враги — наоборот.</li>
+  <li>Таймер возрождения объектов и существ.</li>
+  <li>Субтитры и речь для персонажей.</li>
+</ul>
+
+<h2 class="redaktor">Существа</h2>
+<ul>
+  <li>Характер: дружелюбие, нейтралитет, безволие, охрана территории, агрессия.</li>
+  <li>Видимость, скорость, урон, здоровье.</li>
+  <li>Настройки речи, команды, подбор/дар предметов, перемещение, таймер возрождения.</li>
+</ul>
+
+<h2 class="redaktor">Техника</h2>
+<ul>
+  <li>Ограниченные настройки по шаблону.</li>
+  <li>Наносит урон при столкновении.</li>
+  <li>Наземная и морская техника — ракеты, воздушная и космическая — лазеры.</li>
+  <li>Ограничения установки по высоте и поверхности.</li>
+</ul>
+
+<h2 class="redaktor">Постройки</h2>
+<p>Настройки здоровья и команды. Нельзя перемещать, но можно разрушать.</p>
+
+<h2 class="redaktor">Объекты</h2>
+<ul>
+  <li>Скалы, переносные объекты, неподвижное окружение, растения.</li>
+  <li>Переносные объекты можно поднимать, кидать, дарить.</li>
+  <li>Неподвижные объекты — в основном декоративные, но могут служить опорой.</li>
+</ul>
+
+<h2 class="redaktor">Игровые объекты</h2>
+<ul>
+  <li>Бомбы, ворота, ключи, гранаты, бочки со взрывчаткой.</li>
+  <li>Настройки: урон, площадь действия, маскировка, видимость, цвета ключей и ворот.</li>
+</ul>
+
+<h2 class="redaktor">Режим терраформирования</h2>
+<p>Изменение рельефа, климата, времени, уровня моря, покрова земли, цвета ландшафта. Настройка растений: малые, средние, высокие, с плотностью распределения.</p>
+
+<h2 class="redaktor">Режим проверки</h2>
+<p>Тестирование приключения перед завершением. Переключение между заданиями и скрытыми пунктами.</p>
+
+<h2 class="redaktor">Валюта</h2>
+<p>Индикатор сложности ограничивает количество размещаемых объектов.</p>
+
+<h2 class="redaktor">Фильтры изображения</h2>
+<ul>
+  <li>adventureLook -none: стандартный вид</li>
+  <li>-norainbows: уменьшает яркость цветов</li>
+  <li>-watercolor: размытые контуры</li>
+  <li>-sepia: эффект старого фильма</li>
+  <li>-sixteenbit, -eightbit: стили ретро</li>
+  <li>-filmnoir: чёрно-белый, с дождём и грозой</li>
+</ul>
+
+<h2 class="redaktor">Баги и глюки</h2>
+<ul>
+  <li>Искривление звука при резком приближении камеры.</li>
+  <li>«Лежачие» дороги при повороте.</li>
+  <li>Безопасная лава и способность ходить по воде.</li>
+  <li>Вылет игры при замене творения.</li>
+</ul>
+
+<h2 class="redaktor">Хитрости и фишки</h2>
+<ul>
+  <li>Дополнительные команды поведения Ctrl + клик.</li>
+  <li>Изменение скорости музыки при повороте объектов.</li>
+  <li>Поднятие объектов над землей Ctrl + левая кнопка мыши.</li>
+</ul>
+
+<h2 class="redaktor">Интересные факты</h2>
+<p>Некоторые объекты из неподвижного окружения (например, "Сумбурный стол") — вырезанные хижины с этапа «Племя», использовавшиеся с 2007 года.</p>
+    </main>
+
+
+    <main>
+    
+    <h1 class="heading3">Прочие</h1>
+
+     
 
     </main>
 
