--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         которые могут вас съесть. Полная шкала прогресса открывает редактор
         клетки, где можно прикрепить ноги и купить последние органы. После этого
         начинается этап «Существо».</p>
+
         
         <h3>Уровни (5)</h3>
 
@@ -651,6 +652,8 @@
 
     <p><strong>Редактор клеток</strong> — инструмент в игре <em>Spore</em> для редактирования клеток на этапе «Клетка». Он похож на редактор существ, но работает в 2D и с упрощённой заготовкой тела.</p>
 
+
+    
     <h2 class="redaktor">Редактирование</h2>
     <ul>
         <li>В начале доступны 6 позвонков, покрытых клеточной плёнкой. Их можно делать толще или тоньше и удлинять.</li>
@@ -1014,7 +1017,7 @@
 
   <h1>Другие в игры серии Spore</h1>
    
-  <p class="etap">В спор есть всего 7 отдельных игр происходящие в вселеной спор про них ниже </p>
+  <p class="etap">В спор есть всего 5 отдельных игр происходящие в вселеной спор про них ниже </p>
 
   <h1>Darkspore</h1>
 
@@ -1252,8 +1255,13 @@
 <li><code>refillMotives</code> — восстановление энергии и прочности корабля.</li>
 <li><code>spaceCreate</code> — инструменты терраформирования и окрашивания.</li>
 </ul>
-
     </main>
+
+  <footer>
+  <div class="footer-content">
+    <p>🌌 Spore FanSite © 2025 | Сделано с любовью к игре</p>
+  </div>
+</footer>
 
     <script src="main.js"></script>
   </body>
