--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
         <li>Глаза клетки меняют цвет в зависимости от базового окраса.</li>
         <li>Клетки из скрытого редактора можно сохранять, но нельзя открыть в Sporepedia.</li>
     </ul>
+    <img src="https://images.steamusercontent.com/ugc/13844067075924547994/475E1971B81B05449F233AB8EE0A47400830DCC5/" alt="">
 
 
         <h1>Редактор существ в Spore</h1>
