--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+<canvas id="starfield"></canvas>
   <body>
     <header>
       <div class="logo">
@@ -29,6 +30,9 @@
       </nav>
     </header>
     <main>
+      <div class="stars-container">
+  <canvas class="stars"></canvas>
+</div>
         <h1>Что такое Spore?</h1>
 
         <p class="etap">
@@ -69,6 +73,9 @@
       </p>
     </main>
     <main>
+      <div class="stars-container">
+  <canvas class="stars"></canvas>
+</div>
       <h1>Этапы игры</h1>
 
       <p class="etap">
@@ -644,6 +651,9 @@
     </main>
 
     <main>
+      <div class="stars-container">
+  <canvas class="stars"></canvas>
+</div>
     <h1 class="heading2">О редакторах</h1>
 
     <p class="etap">В Spore существует шесть основных редакторов, служащих для создания любых творений. Также бывают и второстепенные редакторы</p>
@@ -673,8 +683,7 @@
         <li>Секретные фрагменты остаются недоступными на этапе «Существо».</li>
         <li>Глаза клетки меняют цвет в зависимости от базового окраса.</li>
         <li>Клетки из скрытого редактора можно сохранять, но нельзя открыть в Sporepedia.</li>
-    </ul>
-    <img src="https://images.steamusercontent.com/ugc/13844067075924547994/475E1971B81B05449F233AB8EE0A47400830DCC5/" alt="">
+    </ul> 
 
 
         <h1>Редактор существ в Spore</h1>
@@ -937,7 +946,10 @@
     </main>
 
 
-    <main>
+    <main style="margin-bottom: -90px; ">
+      <div class="stars-container">
+  <canvas class="stars"></canvas>
+</div>
     
     <h1 class="heading3">Прочие</h1>
 
@@ -1263,7 +1275,6 @@
     <p>🌌 Spore FanSite © 2025 | Сделано с любовью к игре</p>
   </div>
 </footer>
-
     <script src="main.js"></script>
   </body>
 </html>
